airbnb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: airbnb-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: airbnb.20.227.130.212.nip.io
      http:
        paths:
          - path: /airbnb-hotel(?:/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: airbnb-hotel
                port:
                  number: 80
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: airbnb-web
                port:
                  number: 80
